--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
     <p class="recplayer">recplayer™ (music by nintendo)</p>
     <audio controls="" autoplay="" loop="">
       <source src="Driftveil-City--Pok--mon_-Black---White--(256-kbps)-(mp3cut.net).mp3" type="audio/mpeg">
-    </audio><a href="loadering.html"><img id="loadering" src="loadering.gif" alt="Image description">
+    </audio><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img id="loadering" src="loadering.gif" alt="Image description">
   </body>
 </html>
