--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
+    <title>RecMonke's Landing</title>
   </head>
   <body>
     <nav>
@@ -18,8 +19,11 @@
           </div>
           <div class="menu-items">
             <li><a href="https://despicable-games.github.io/recmonke/">RecMonke Site</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/k3j8rXI_xsQpA0Di5Hpy7pQKr9fanQ3lvnOZP-bd3B8">Monke Buisness</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/gkwV2AwIZuB1q6HgCJcNVTM9NQH9dA8ku5IqW3fNR5A">Stupid Racers</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/HoIKbaKPicQf3tI4YlhHCLs4_e7J9fTkUhI6VLylDtU">Galaxiformer</a></li>
             <li><a href="test.html">coming soon</a></li>
-            <li><a href="test.html.html">coming soon</a></li>
+            <li><a href="test.html">coming soon</a></li>
           </div>
         </div>
       </div>
@@ -31,10 +35,10 @@
     <br>
     <br>
     <br>
-    <h2>I make a lot of funny website things so I made this site so you can access them all here in the menu</h2>
+    <h2>Possibly the second best game website on the interwebs. (first is neal.fun)</h2>
     <br>
     <br>
-    <marquee><h1>lol_im_too_lazy_to_fill_this_up_with_stuff_so_yea</h1></marquee>
+    <marquee><h1>NEW GAMES OUT NOW CHECK THEM OUT IN THE MENU!!!!!!!1one</h1></marquee>
     <br>
     <br>
     <br>
@@ -57,7 +61,9 @@
     <br>
     <p class="recplayer">recplayer™ (music by nintendo)</p>
     <audio controls="" autoplay="" loop="">
-      <source src="Driftveil-City--Pok--mon_-Black---White--(256-kbps)-(mp3cut.net).mp3" type="audio/mpeg">
+      <source src="3DS-System-Music---Theme-Shop--AudioTrimmer.com-.mp3" type="audio/mpeg">
     </audio><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img id="loadering" src="loadering.gif" alt="Image description">
+  
+</a>
   </body>
 </html>
