--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <br>
     <br>
     <br>
+    <img height="449" class="logoimage" src="logo.png" alt="Image description" />
     <br>
     <br>
     <br>
