--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
             <h1>RecMonke's website thingy</h1>
           </div>
           <div class="menu-items">
-            <li><a href="https://despicable-games.github.io/recmonke/">RecMonke Site</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/k3j8rXI_xsQpA0Di5Hpy7pQKr9fanQ3lvnOZP-bd3B8">Monke Buisness</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/gkwV2AwIZuB1q6HgCJcNVTM9NQH9dA8ku5IqW3fNR5A">Stupid Racers</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/HoIKbaKPicQf3tI4YlhHCLs4_e7J9fTkUhI6VLylDtU">Galaxiformer</a></li>
+            <li><a href="https://despicable-games.github.io/recmonke/">RecMonke Site (fora project)</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/k3j8rXI_xsQpA0Di5Hpy7pQKr9fanQ3lvnOZP-bd3B8">Monke Buisness (best gaem)</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/gkwV2AwIZuB1q6HgCJcNVTM9NQH9dA8ku5IqW3fNR5A">Stupid Racers (max verstapen)</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/HoIKbaKPicQf3tI4YlhHCLs4_e7J9fTkUhI6VLylDtU">Galaxiformer (lebonbon)</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/6HRf5rIxWF5vmst-KWN1X3dzTSK9E0s2AOzk4uxT9UA">Hoopz(ballin)</a></li>
+            <li><a href="https://studio.code.org/projects/applab/2jB663QaBK1ZU2pQHJj1wuWgMCUjGda1rHhaBM-jrcc">Math Formulas(get some brain cells back)</a></li>
+            <li><a href="https://studio.code.org/projects/gamelab/GOHkmE9rruYRqoaFOru5WmbDHh1AbCOqDrCyDAXJARg ">The Entity(spooki boi)</a></li>
             <li><a href="test.html">coming soon</a></li>
             <li><a href="test.html">coming soon</a></li>
           </div>
@@ -31,15 +34,15 @@
     <br>
     <br>
     <br>
-    <img height="449" class="logoimage" src="logo.png" alt="Image description" />
+    <img height="450" class="logoimage" src="logofruitigeraero.png" alt="Image description" />
     <br>
     <br>
     <br>
     <br>
-    <h2>Possibly the second best game website on the interwebs. (first is neal.fun)</h2>
+    <h2>Now with spooky boi!</h2>
     <br>
     <br>
-    <marquee><h1>NEW GAMES OUT NOW CHECK THEM OUT IN THE MENU!!!!!!!1one</h1></marquee>
+    <marquee><h1>AHHHHHHHHHHH NEW GAME SO SCARYYYY!!!!!!!1one</h1></marquee>
     <br>
     <br>
     <br>
@@ -61,8 +64,8 @@
     <br>
     <br>
     <p class="recplayer">recplayer™ (music by nintendo)</p>
-    <audio controls="" autoplay="" loop="">
-      <source src="3DS-System-Music---Theme-Shop--AudioTrimmer.com-.mp3" type="audio/mpeg">
+    <audio controls autoplay loop>
+      <source src="Clothing-Shop---Tomodachi-Life-OST-(256-kbps).mp3" type="audio/mpeg">
     </audio><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img id="loadering" src="loadering.gif" alt="Image description">
   
 </a>
