--- a/index.html
+++ b/index.html
@@ -1,73 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <title>RecMonke's Landing</title>
-  </head>
-  <body>
-    <nav>
-      <div class="navbar">
-        <div class="container nav-container">
-          <input class="checkbox" type="checkbox" name="" id="">
-          <div class="hamburger-lines">
-            <span class="line line1"></span>
-            <span class="line line2"></span>
-            <span class="line line3"></span>
-          </div>  
-          <div class="logo">
-            <h1>RecMonke's website thingy</h1>
+<html lang="en">
+<body>
+    <link rel="stylesheet" href="start.css">
+<div class="windows__bg">
+    <div class="windows__bg--inner">
+      <a href="home.html"><div class="windows__logo">
+          <div class="windows__logo--inner red"></div>
+          <div class="windows__logo--inner green"></div>
+          <div class="windows__logo--inner blue"></div>
+          <div class="windows__logo--inner yellow"></div>
+      </div></a>
+      <div class="windows__name">
+          <p>Click</p>
+          <div class="windows__name--inner">
+              The Logo<span>xp</span>
           </div>
-          <div class="menu-items">
-            <li><a href="https://despicable-games.github.io/recmonke/">RecMonke Site (fora project)</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/k3j8rXI_xsQpA0Di5Hpy7pQKr9fanQ3lvnOZP-bd3B8">Monke Buisness (best gaem)</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/gkwV2AwIZuB1q6HgCJcNVTM9NQH9dA8ku5IqW3fNR5A">Stupid Racers (max verstapen)</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/HoIKbaKPicQf3tI4YlhHCLs4_e7J9fTkUhI6VLylDtU">Galaxiformer (lebonbon)</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/6HRf5rIxWF5vmst-KWN1X3dzTSK9E0s2AOzk4uxT9UA">Hoopz(ballin)</a></li>
-            <li><a href="https://studio.code.org/projects/applab/2jB663QaBK1ZU2pQHJj1wuWgMCUjGda1rHhaBM-jrcc">Math Formulas(get some brain cells back)</a></li>
-            <li><a href="https://studio.code.org/projects/gamelab/GOHkmE9rruYRqoaFOru5WmbDHh1AbCOqDrCyDAXJARg ">The Entity(spooki boi)</a></li>
-            <li><a href="test.html">coming soon</a></li>
-            <li><a href="test.html">coming soon</a></li>
-          </div>
-        </div>
       </div>
-    </nav>
-    <br>
-    <br>
-    <br>
-    <img height="450" class="logoimage" src="logofruitigeraero.png" alt="Image description" />
-    <br>
-    <br>
-    <br>
-    <br>
-    <h2>Now with spooky boi!</h2>
-    <br>
-    <br>
-    <marquee><h1>AHHHHHHHHHHH NEW GAME SO SCARYYYY!!!!!!!1one</h1></marquee>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a href="chipi.html"><img id="cat" src="cat.png" alt="Image description"></a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p class="recplayer">recplayer™ (music by nintendo)</p>
-    <audio controls autoplay loop>
-      <source src="Clothing-Shop---Tomodachi-Life-OST-(256-kbps).mp3" type="audio/mpeg">
-    </audio><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img id="loadering" src="loadering.gif" alt="Image description">
-  
-</a>
+      <div class="windows__bg--loading">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   </body>
-</html>
+  </html>
