--- a/home.html
+++ b/home.html
@@ -64,40 +64,40 @@
 	</div>
 	<div class="icon ">
 		<a href="https://despicable-games.github.io/recmonke/"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/1.png?raw=true"></a><br />
-		RecMonke Site (for a project)
+		RecMonke Site
 	</div>
 
 	<br />
 	<div class="icon ">
 		<a href="https://studio.code.org/projects/gamelab/k3j8rXI_xsQpA0Di5Hpy7pQKr9fanQ3lvnOZP-bd3B8"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/2.png?raw=true"></a><br />
-		Monke Buisness (best gaem)
+		Monke Buisness
 	</div>
 	<div class="icon ">
 		<a href="https://studio.code.org/projects/gamelab/gkwV2AwIZuB1q6HgCJcNVTM9NQH9dA8ku5IqW3fNR5A"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/3.png?raw=true"></a><br />
-		Stupid Racers (max verstapen)
+		Stupid Racers
 	</div>
 	<div class="icon ">
 		<a href="https://studio.code.org/projects/gamelab/HoIKbaKPicQf3tI4YlhHCLs4_e7J9fTkUhI6VLylDtU"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/4.png?raw=true"></a><br />
-		Galaxiformer (lebonbon)
+		Galaxiformer
 	</div>
 	<div class="icon ">
 		<a href="https://studio.code.org/projects/gamelab/6HRf5rIxWF5vmst-KWN1X3dzTSK9E0s2AOzk4uxT9UA"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/5.png?raw=true"></a><br />
-		Hoopz (ballin)
+		Hoopz
 	</div>
 	<br />
 
 	<div class="icon ">
 		<a href="https://studio.code.org/projects/applab/2jB663QaBK1ZU2pQHJj1wuWgMCUjGda1rHhaBM-jrcc"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/6.png?raw=true"></a><br />
-		Math Formulas (get some brain cells back)
+		Math Formulas
 	</div>
 
 	<div class="icon ">
 		<a href="https://studio.code.org/projects/gamelab/GOHkmE9rruYRqoaFOru5WmbDHh1AbCOqDrCyDAXJARg"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/7.png?raw=true"></a><br />
-		The Entity (spooki boi)
+		The Entity
 	</div>
 	<div class="icon ">
 		<a href="https://recmonke.itch.io/goofy-cd"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/8.png?raw=true"></a><br />
-		Goofy CD (big gaem)
+		Goofy CD
 	</div>
 	<br />
 	<!--Here, I demonstrate the usage of blank icons to serve as spacing.-->
