--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta name="title" content="RecMonke's Website Thingy"/>
+  <meta name="description" content="The OFFICIAL SITE of RecMonke."/>
+  <meta name="keywords" content="RecMonke"/>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <title>RecMonke's Website Thingy</title>
+</head>
 <body>
     <link rel="stylesheet" href="start.css">
 <div class="windows__bg">
