--- a/home.html
+++ b/home.html
@@ -126,8 +126,8 @@
 	</div>
 
 	<div class="icon ">
-		<a href="#"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="img/CD.png"></a><br />
-		coming soon
+		<a href="eagler.html"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://i.pinimg.com/originals/45/ae/f5/45aef5cc24a0402fc44cbeb9d63fdee6.png"></a><br />
+		Eaglercraft
 	</div>
 
 	<br />
