--- a/eagler.html
+++ b/eagler.html
@@ -18,7 +18,7 @@
         </div>
         <div class="window-body">
           <p>its literally minecraft 1.8 in a web browser. It includes shaders, hosting worlds, and servers. You can see a server list at </p> <a href="https://servers.eaglercraft.com/">Eaglercraft Server List</a> <br>
-          <img src="https://i.pinimg.com/originals/45/ae/f5/45aef5cc24a0402fc44cbeb9d63fdee6.png" width="500" height="500"> <a href="https://eaglercraft.com/mc/1.8.8/"><button>Continue</button></a>
+          <img src="https://i.pinimg.com/originals/45/ae/f5/45aef5cc24a0402fc44cbeb9d63fdee6.png" width="500" height="500"> <a href="EaglercraftX_1.8_u35.html"><button>Continue</button></a>
         </div>
       </div>
   </body>
