--- a/home.html
+++ b/home.html
@@ -157,7 +157,7 @@
 	</div>
 	<audio autoplay loop controls>
 		<p>recplayer (music by nintendo)</p>
-		<source src="snd/jan2015eshop.mp3" type="audio/mp3" />
+		<source src="snd/September 2015 - Nintendo eShop Music.mp3" type="audio/mp3" />
 	</audio>
 </body> 	
 </html>
