--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
 	</div>
 
 	<div class="icon ">
-		<a href="eagler.html"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://i.pinimg.com/originals/45/ae/f5/45aef5cc24a0402fc44cbeb9d63fdee6.png"></a><br />
+		<a href="eagler.html"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="img/R (2).png"></a><br />
 		Eaglercraft
 	</div>
 
