The Halloween Update!
new things!

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 	</div>
 
 	<div class="icon ">
-		<a href="https://studio.code.org/projects/gamelab/GOHkmE9rruYRqoaFOru5WmbDHh1AbCOqDrCyDAXJARg"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/7.png?raw=true"></a><br />
+		<a href="https://studio.code.org/projects/applab/0-vcmk8KhJ9JQHLUQa51QgtfBVv4qOjA_hquDG-zeVk "><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="https://github.com/RecMonke/icons/blob/main/Icons/7.png?raw=true"></a><br />
 		The Entity
 	</div>
 	<div class="icon ">
@@ -132,8 +132,8 @@
 
 	<br />
 	<div class="icon ">
-		<a href="#"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="img/CD.png"></a><br />
-		coming soon
+		<a href="https://studio.code.org/projects/gamelab/jd5Nrn-j_wbY0Cz5_nWxGLHQK8rfgAnsxCS8ca9KkzM"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="img/sc.png"></a><br />
+		Stoopid Cat
 	</div>
 	<div class="icon ">
 		<a href="#"><img class="shortcut" src="img/Shortcut.png"><img class="icon " src="img/CD.png"></a><br />
@@ -157,7 +157,7 @@
 	</div>
 	<audio autoplay loop controls>
 		<p>recplayer (music by nintendo)</p>
-		<source src="snd/September 2015 - Nintendo eShop Music.mp3" type="audio/mp3" />
+		<source src="snd/spooki.mp3" type="audio/mp3" />
 	</audio>
 </body> 	
 </html>
